pythonscript/cffi_bindings/cdef.gen.h

/********************************************************/
/* AUTOGENERATED by tools/generate_gdnative_cffidefs.py */
/********************************************************/
typedef enum godot_error {GODOT_OK, GODOT_FAILED, GODOT_ERR_UNAVAILABLE, GODOT_ERR_UNCONFIGURED, GODOT_ERR_UNAUTHORIZED, GODOT_ERR_PARAMETER_RANGE_ERROR, GODOT_ERR_OUT_OF_MEMORY, GODOT_ERR_FILE_NOT_FOUND, GODOT_ERR_FILE_BAD_DRIVE, GODOT_ERR_FILE_BAD_PATH, GODOT_ERR_FILE_NO_PERMISSION, GODOT_ERR_FILE_ALREADY_IN_USE, GODOT_ERR_FILE_CANT_OPEN, GODOT_ERR_FILE_CANT_WRITE, GODOT_ERR_FILE_CANT_READ, GODOT_ERR_FILE_UNRECOGNIZED, GODOT_ERR_FILE_CORRUPT, GODOT_ERR_FILE_MISSING_DEPENDENCIES, GODOT_ERR_FILE_EOF, GODOT_ERR_CANT_OPEN, GODOT_ERR_CANT_CREATE, GODOT_ERR_QUERY_FAILED, GODOT_ERR_ALREADY_IN_USE, GODOT_ERR_LOCKED, GODOT_ERR_TIMEOUT, GODOT_ERR_CANT_CONNECT, GODOT_ERR_CANT_RESOLVE, GODOT_ERR_CONNECTION_ERROR, GODOT_ERR_CANT_AQUIRE_RESOURCE, GODOT_ERR_CANT_FORK, GODOT_ERR_INVALID_DATA, GODOT_ERR_INVALID_PARAMETER, GODOT_ERR_ALREADY_EXISTS, GODOT_ERR_DOES_NOT_EXIST, GODOT_ERR_DATABASE_CANT_READ, GODOT_ERR_DATABASE_CANT_WRITE, GODOT_ERR_COMPILATION_FAILED, GODOT_ERR_METHOD_NOT_FOUND, GODOT_ERR_LINK_FAILED, GODOT_ERR_SCRIPT_FAILED, GODOT_ERR_CYCLIC_LINK, GODOT_ERR_INVALID_DECLARATION, GODOT_ERR_DUPLICATE_SYMBOL, GODOT_ERR_PARSE_ERROR, GODOT_ERR_BUSY, GODOT_ERR_SKIP, GODOT_ERR_HELP, GODOT_ERR_BUG, GODOT_ERR_PRINTER_ON_FIRE, GODOT_ERR_OMFG_THIS_IS_VERY_VERY_BAD, GODOT_ERR_WTF = GODOT_ERR_OMFG_THIS_IS_VERY_VERY_BAD} godot_error;
typedef int godot_int;
typedef float godot_real;
typedef struct godot_string
{
  uint8_t _dont_touch_that[8];
} godot_string;
typedef struct godot_vector2
{
  uint8_t _dont_touch_that[8];
} godot_vector2;
typedef struct godot_vector3
{
  uint8_t _dont_touch_that[12];
} godot_vector3;
typedef struct godot_color
{
  uint8_t _dont_touch_that[16];
} godot_color;
typedef struct godot_pool_vector2_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_vector2_array;
typedef struct godot_pool_vector3_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_vector3_array;
typedef struct godot_pool_color_array
{
  uint8_t _dont_touch_that[8];
} godot_pool_color_array;
typedef struct godot_array
{
  uint8_t _dont_touch_that[8];
} godot_array;
typedef struct godot_variant
{
  uint8_t _dont_touch_that[24];
} godot_variant;
void godot_pool_vector2_array_new_with_array(godot_pool_vector2_array *p_pv2a, const godot_array *p_a);
void godot_pool_vector2_array_append(godot_pool_vector2_array *p_pv2a, const godot_vector2 *p_data);
void godot_pool_vector2_array_append_array(godot_pool_vector2_array *p_pv2a, const godot_pool_vector2_array *p_array);
int godot_pool_vector2_array_insert(godot_pool_vector2_array *p_pv2a, const godot_int p_idx, const godot_vector2 *p_data);
void godot_pool_vector2_array_invert(godot_pool_vector2_array *p_pv2a);
void godot_pool_vector2_array_push_back(godot_pool_vector2_array *p_pv2a, const godot_vector2 *p_data);
void godot_pool_vector2_array_remove(godot_pool_vector2_array *p_pv2a, const godot_int p_idx);
void godot_pool_vector2_array_resize(godot_pool_vector2_array *p_pv2a, const godot_int p_size);
void godot_pool_vector2_array_set(godot_pool_vector2_array *p_pv2a, const godot_int p_idx, const godot_vector2 *p_data);
godot_vector2 godot_pool_vector2_array_get(godot_pool_vector2_array *p_pv2a, const godot_int p_idx);
godot_int godot_pool_vector2_array_size(godot_pool_vector2_array *p_pv2a);
void godot_pool_vector2_array_destroy(godot_pool_vector2_array *p_pv2a);
void godot_pool_vector3_array_new(godot_pool_vector3_array *p_pv3a);
void godot_pool_vector3_array_new_with_array(godot_pool_vector3_array *p_pv3a, const godot_array *p_a);
void godot_pool_vector3_array_append(godot_pool_vector3_array *p_pv3a, const godot_vector3 *p_data);
void godot_pool_vector3_array_append_array(godot_pool_vector3_array *p_pv3a, const godot_pool_vector3_array *p_array);
int godot_pool_vector3_array_insert(godot_pool_vector3_array *p_pv3a, const godot_int p_idx, const godot_vector3 *p_data);
void godot_pool_vector3_array_invert(godot_pool_vector3_array *p_pv3a);
void godot_pool_vector3_array_push_back(godot_pool_vector3_array *p_pv3a, const godot_vector3 *p_data);
void godot_pool_vector3_array_remove(godot_pool_vector3_array *p_pv3a, const godot_int p_idx);
void godot_pool_vector3_array_resize(godot_pool_vector3_array *p_pv3a, const godot_int p_size);
void godot_pool_vector3_array_set(godot_pool_vector3_array *p_pv3a, const godot_int p_idx, const godot_vector3 *p_data);
godot_vector3 godot_pool_vector3_array_get(godot_pool_vector3_array *p_pv3a, const godot_int p_idx);
godot_int godot_pool_vector3_array_size(godot_pool_vector3_array *p_pv3a);
void godot_pool_vector3_array_destroy(godot_pool_vector3_array *p_pv3a);
void godot_pool_color_array_new(godot_pool_color_array *p_pca);
void godot_pool_color_array_new_with_array(godot_pool_color_array *p_pca, const godot_array *p_a);
void godot_pool_color_array_append(godot_pool_color_array *p_pca, const godot_color *p_data);
void godot_pool_color_array_append_array(godot_pool_color_array *p_pca, const godot_pool_color_array *p_array);
int godot_pool_color_array_insert(godot_pool_color_array *p_pca, const godot_int p_idx, const godot_color *p_data);
void godot_pool_color_array_invert(godot_pool_color_array *p_pca);
void godot_pool_color_array_push_back(godot_pool_color_array *p_pca, const godot_color *p_data);
void godot_pool_color_array_remove(godot_pool_color_array *p_pca, const godot_int p_idx);
void godot_pool_color_array_resize(godot_pool_color_array *p_pca, const godot_int p_size);
void godot_pool_color_array_set(godot_pool_color_array *p_pca, const godot_int p_idx, const godot_color *p_data);
godot_color godot_pool_color_array_get(godot_pool_color_array *p_pca, const godot_int p_idx);
godot_int godot_pool_color_array_size(godot_pool_color_array *p_pca);
void godot_pool_color_array_destroy(godot_pool_color_array *p_pca);