pythonscript/gdnative.pxd


    void godot_pool_vector2_array_new_copy(godot_pool_vector2_array* r_dest, godot_pool_vector2_array* p_src)

    void godot_pool_vector2_array_new_with_array(godot_pool_vector2_array* r_dest, godot_array* p_a)

    void godot_pool_vector2_array_append(godot_pool_vector2_array* p_self, godot_vector2* p_data)

    void godot_pool_vector2_array_append_array(godot_pool_vector2_array* p_self, godot_pool_vector2_array* p_array)

    godot_error godot_pool_vector2_array_insert(godot_pool_vector2_array* p_self, godot_int p_idx, godot_vector2* p_data)

    void godot_pool_vector2_array_invert(godot_pool_vector2_array* p_self)

    void godot_pool_vector2_array_push_back(godot_pool_vector2_array* p_self, godot_vector2* p_data)

    void godot_pool_vector2_array_remove(godot_pool_vector2_array* p_self, godot_int p_idx)

    void godot_pool_vector2_array_resize(godot_pool_vector2_array* p_self, godot_int p_size)

    godot_pool_vector2_array_read_access* godot_pool_vector2_array_read(godot_pool_vector2_array* p_self)

    godot_pool_vector2_array_write_access* godot_pool_vector2_array_write(godot_pool_vector2_array* p_self)

    void godot_pool_vector2_array_set(godot_pool_vector2_array* p_self, godot_int p_idx, godot_vector2* p_data)

    godot_vector2 godot_pool_vector2_array_get(godot_pool_vector2_array* p_self, godot_int p_idx)

    godot_int godot_pool_vector2_array_size(godot_pool_vector2_array* p_self)

    void godot_pool_vector2_array_destroy(godot_pool_vector2_array* p_self)

    void godot_pool_vector3_array_new(godot_pool_vector3_array* r_dest)

    void godot_pool_vector3_array_new_copy(godot_pool_vector3_array* r_dest, godot_pool_vector3_array* p_src)

    void godot_pool_vector3_array_new_with_array(godot_pool_vector3_array* r_dest, godot_array* p_a)

    void godot_pool_vector3_array_append(godot_pool_vector3_array* p_self, godot_vector3* p_data)

    void godot_pool_vector3_array_append_array(godot_pool_vector3_array* p_self, godot_pool_vector3_array* p_array)

    godot_error godot_pool_vector3_array_insert(godot_pool_vector3_array* p_self, godot_int p_idx, godot_vector3* p_data)

    void godot_pool_vector3_array_invert(godot_pool_vector3_array* p_self)

    void godot_pool_vector3_array_push_back(godot_pool_vector3_array* p_self, godot_vector3* p_data)

    void godot_pool_vector3_array_remove(godot_pool_vector3_array* p_self, godot_int p_idx)

    void godot_pool_vector3_array_resize(godot_pool_vector3_array* p_self, godot_int p_size)

    godot_pool_vector3_array_read_access* godot_pool_vector3_array_read(godot_pool_vector3_array* p_self)

    godot_pool_vector3_array_write_access* godot_pool_vector3_array_write(godot_pool_vector3_array* p_self)

    void godot_pool_vector3_array_set(godot_pool_vector3_array* p_self, godot_int p_idx, godot_vector3* p_data)

    godot_vector3 godot_pool_vector3_array_get(godot_pool_vector3_array* p_self, godot_int p_idx)

    godot_int godot_pool_vector3_array_size(godot_pool_vector3_array* p_self)

    void godot_pool_vector3_array_destroy(godot_pool_vector3_array* p_self)

    void godot_pool_color_array_new(godot_pool_color_array* r_dest)

    void godot_pool_color_array_new_copy(godot_pool_color_array* r_dest, godot_pool_color_array* p_src)

    void godot_pool_color_array_new_with_array(godot_pool_color_array* r_dest, godot_array* p_a)

    void godot_pool_color_array_append(godot_pool_color_array* p_self, godot_color* p_data)

    void godot_pool_color_array_append_array(godot_pool_color_array* p_self, godot_pool_color_array* p_array)

    godot_error godot_pool_color_array_insert(godot_pool_color_array* p_self, godot_int p_idx, godot_color* p_data)

    void godot_pool_color_array_invert(godot_pool_color_array* p_self)

    void godot_pool_color_array_push_back(godot_pool_color_array* p_self, godot_color* p_data)

    void godot_pool_color_array_remove(godot_pool_color_array* p_self, godot_int p_idx)

    void godot_pool_color_array_resize(godot_pool_color_array* p_self, godot_int p_size)

    godot_pool_color_array_read_access* godot_pool_color_array_read(godot_pool_color_array* p_self)

    godot_pool_color_array_write_access* godot_pool_color_array_write(godot_pool_color_array* p_self)

    void godot_pool_color_array_set(godot_pool_color_array* p_self, godot_int p_idx, godot_color* p_data)

    godot_color godot_pool_color_array_get(godot_pool_color_array* p_self, godot_int p_idx)

    godot_int godot_pool_color_array_size(godot_pool_color_array* p_self)

    void godot_pool_color_array_destroy(godot_pool_color_array* p_self)

    godot_pool_byte_array_read_access* godot_pool_byte_array_read_access_copy(godot_pool_byte_array_read_access* p_other)

    uint8_t* godot_pool_byte_array_read_access_ptr(godot_pool_byte_array_read_access* p_read)

    void godot_pool_byte_array_read_access_operator_assign(godot_pool_byte_array_read_access* p_read, godot_pool_byte_array_read_access* p_other)

    void godot_pool_byte_array_read_access_destroy(godot_pool_byte_array_read_access* p_read)

    godot_pool_int_array_read_access* godot_pool_int_array_read_access_copy(godot_pool_int_array_read_access* p_other)

    godot_int* godot_pool_int_array_read_access_ptr(godot_pool_int_array_read_access* p_read)

    void godot_pool_int_array_read_access_operator_assign(godot_pool_int_array_read_access* p_read, godot_pool_int_array_read_access* p_other)

    void godot_pool_int_array_read_access_destroy(godot_pool_int_array_read_access* p_read)

    godot_pool_real_array_read_access* godot_pool_real_array_read_access_copy(godot_pool_real_array_read_access* p_other)

    godot_real* godot_pool_real_array_read_access_ptr(godot_pool_real_array_read_access* p_read)

    void godot_pool_real_array_read_access_operator_assign(godot_pool_real_array_read_access* p_read, godot_pool_real_array_read_access* p_other)

    void godot_pool_real_array_read_access_destroy(godot_pool_real_array_read_access* p_read)

    godot_pool_string_array_read_access* godot_pool_string_array_read_access_copy(godot_pool_string_array_read_access* p_other)

    godot_string* godot_pool_string_array_read_access_ptr(godot_pool_string_array_read_access* p_read)

    void godot_pool_string_array_read_access_operator_assign(godot_pool_string_array_read_access* p_read, godot_pool_string_array_read_access* p_other)

    void godot_pool_string_array_read_access_destroy(godot_pool_string_array_read_access* p_read)

    godot_pool_vector2_array_read_access* godot_pool_vector2_array_read_access_copy(godot_pool_vector2_array_read_access* p_other)

    godot_vector2* godot_pool_vector2_array_read_access_ptr(godot_pool_vector2_array_read_access* p_read)

    void godot_pool_vector2_array_read_access_operator_assign(godot_pool_vector2_array_read_access* p_read, godot_pool_vector2_array_read_access* p_other)

    void godot_pool_vector2_array_read_access_destroy(godot_pool_vector2_array_read_access* p_read)

    godot_pool_vector3_array_read_access* godot_pool_vector3_array_read_access_copy(godot_pool_vector3_array_read_access* p_other)

    godot_vector3* godot_pool_vector3_array_read_access_ptr(godot_pool_vector3_array_read_access* p_read)

    void godot_pool_vector3_array_read_access_operator_assign(godot_pool_vector3_array_read_access* p_read, godot_pool_vector3_array_read_access* p_other)

    void godot_pool_vector3_array_read_access_destroy(godot_pool_vector3_array_read_access* p_read)

    godot_pool_color_array_read_access* godot_pool_color_array_read_access_copy(godot_pool_color_array_read_access* p_other)

    godot_color* godot_pool_color_array_read_access_ptr(godot_pool_color_array_read_access* p_read)

    void godot_pool_color_array_read_access_operator_assign(godot_pool_color_array_read_access* p_read, godot_pool_color_array_read_access* p_other)

    void godot_pool_color_array_read_access_destroy(godot_pool_color_array_read_access* p_read)

    godot_pool_byte_array_write_access* godot_pool_byte_array_write_access_copy(godot_pool_byte_array_write_access* p_other)

    uint8_t* godot_pool_byte_array_write_access_ptr(godot_pool_byte_array_write_access* p_write)

    void godot_pool_byte_array_write_access_operator_assign(godot_pool_byte_array_write_access* p_write, godot_pool_byte_array_write_access* p_other)

    void godot_pool_byte_array_write_access_destroy(godot_pool_byte_array_write_access* p_write)

    godot_pool_int_array_write_access* godot_pool_int_array_write_access_copy(godot_pool_int_array_write_access* p_other)

    godot_int* godot_pool_int_array_write_access_ptr(godot_pool_int_array_write_access* p_write)

    void godot_pool_int_array_write_access_operator_assign(godot_pool_int_array_write_access* p_write, godot_pool_int_array_write_access* p_other)

    void godot_pool_int_array_write_access_destroy(godot_pool_int_array_write_access* p_write)

    godot_pool_real_array_write_access* godot_pool_real_array_write_access_copy(godot_pool_real_array_write_access* p_other)

    godot_real* godot_pool_real_array_write_access_ptr(godot_pool_real_array_write_access* p_write)

    void godot_pool_real_array_write_access_operator_assign(godot_pool_real_array_write_access* p_write, godot_pool_real_array_write_access* p_other)

    void godot_pool_real_array_write_access_destroy(godot_pool_real_array_write_access* p_write)

    godot_pool_string_array_write_access* godot_pool_string_array_write_access_copy(godot_pool_string_array_write_access* p_other)

    godot_string* godot_pool_string_array_write_access_ptr(godot_pool_string_array_write_access* p_write)

    void godot_pool_string_array_write_access_operator_assign(godot_pool_string_array_write_access* p_write, godot_pool_string_array_write_access* p_other)

    void godot_pool_string_array_write_access_destroy(godot_pool_string_array_write_access* p_write)

    godot_pool_vector2_array_write_access* godot_pool_vector2_array_write_access_copy(godot_pool_vector2_array_write_access* p_other)

    godot_vector2* godot_pool_vector2_array_write_access_ptr(godot_pool_vector2_array_write_access* p_write)

    void godot_pool_vector2_array_write_access_operator_assign(godot_pool_vector2_array_write_access* p_write, godot_pool_vector2_array_write_access* p_other)

    void godot_pool_vector2_array_write_access_destroy(godot_pool_vector2_array_write_access* p_write)

    godot_pool_vector3_array_write_access* godot_pool_vector3_array_write_access_copy(godot_pool_vector3_array_write_access* p_other)

    godot_vector3* godot_pool_vector3_array_write_access_ptr(godot_pool_vector3_array_write_access* p_write)

    void godot_pool_vector3_array_write_access_operator_assign(godot_pool_vector3_array_write_access* p_write, godot_pool_vector3_array_write_access* p_other)

    void godot_pool_vector3_array_write_access_destroy(godot_pool_vector3_array_write_access* p_write)

    godot_pool_color_array_write_access* godot_pool_color_array_write_access_copy(godot_pool_color_array_write_access* p_other)

    godot_color* godot_pool_color_array_write_access_ptr(godot_pool_color_array_write_access* p_write)

    void godot_pool_color_array_write_access_operator_assign(godot_pool_color_array_write_access* p_write, godot_pool_color_array_write_access* p_other)

    void godot_pool_color_array_write_access_destroy(godot_pool_color_array_write_access* p_write)

    ctypedef struct godot_variant:
        uint8_t _dont_touch_that[16 + sizeof(void *)]
